Some WebAudio tests give different output on different machines https://bugs.webkit.org/show_bug.cgi?id=216371

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline a few tests that now have a different output.

* web-platform-tests/webaudio/the-audio-api/the-audiocontext-interface/audiocontextoptions-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/k-rate-stereo-panner-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-biquadfilternode-interface/biquad-getFrequencyResponse-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-convolvernode-interface/realtime-conv-expected.txt:

Source/WebCore:

Add function to override the value returned by AudioDestination::hardwareSampleRate().

* DerivedSources-output.xcfilelist:
* platform/audio/AudioDestination.h:
* platform/audio/cocoa/AudioDestinationCocoa.cpp:
(WebCore::hardwareSampleRateOverride):
(WebCore::AudioDestination::hardwareSampleRate):
(WebCore::AudioDestination::setHardwareSampleRateOverride):
* platform/audio/gstreamer/AudioDestinationGStreamer.cpp:
(WebCore::hardwareSampleRateOverride):
(WebCore::AudioDestination::hardwareSampleRate):
(WebCore::AudioDestination::setHardwareSampleRateOverride):

Source/WebKit:

Add InjectedBundle SPI to set the hardware sample rate.

* WebProcess/InjectedBundle/API/c/WKBundle.cpp:
(WKBundleSetHardwareSampleRateOverride):
* WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::setHardwareSampleRateOverride):
* WebProcess/InjectedBundle/InjectedBundle.h:

Source/WebKitLegacy/mac:

Add WebView SPI to set the hardware sample rate.

* WebView/WebView.mm:
(+[WebView _setHardwareSampleRateOverride:]):
* WebView/WebViewPrivate.h:

Tools:

Update DRT / WRT to hardcode the hardware sample rate to 44100 so that Web Audio
test have the same output on different hardware.

* DumpRenderTree/mac/DumpRenderTree.mm:
(createWebViewAndOffscreenWindow):
* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):

Canonical link: https://commits.webkit.org/229200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266842 268f45cc-cd09-0410-ab3c-d52691b4dbfc