Source/WebCore/platform/audio/cocoa/AudioDestinationCocoa.cpp
@@ -37,6 +37,12 @@ namespace WebCore {
 
 const int kRenderBufferSize = 128;
 
+static Optional<float>& hardwareSampleRateOverride()
+{
+    static NeverDestroyed<Optional<float>> sampleRate;
+    return sampleRate.get();
+}
+
 CreateAudioDestinationCocoaOverride AudioDestinationCocoa::createOverride = nullptr;
 
 std::unique_ptr<AudioDestination> AudioDestination::create(AudioIOCallback& callback, const String&, unsigned numberOfInputChannels, unsigned numberOfOutputChannels, float sampleRate)
@@ -60,7 +66,14 @@ std::unique_ptr<AudioDestination> AudioDestination::create(AudioIOCallback& call
 
 float AudioDestination::hardwareSampleRate()
 {
+    if (auto sampleRate = hardwareSampleRateOverride())
+        return *sampleRate;
     return AudioSession::sharedSession().sampleRate();
+}
+
+void AudioDestination::setHardwareSampleRateOverride(Optional<float> sampleRate)
+{
+    hardwareSampleRateOverride() = sampleRate;
 }
 
 unsigned long AudioDestination::maxChannelCount()
@@ -86,7 +99,7 @@ AudioDestinationCocoa::~AudioDestinationCocoa()
 
 unsigned AudioDestinationCocoa::framesPerBuffer() const
 {
-    return m_renderBus->length();
+    return kRenderBufferSize;
 }
 
 void AudioDestinationCocoa::start()
