Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundle.cpp
@@ -189,6 +189,11 @@ void WKBundleResetOriginAccessAllowLists(WKBundleRef bundleRef)
     WebKit::toImpl(bundleRef)->resetOriginAccessAllowLists();
 }
 
+void WKBundleSetHardwareSampleRateOverride(WKBundleRef bundleRef, float sample)
+{
+    WebKit::toImpl(bundleRef)->setHardwareSampleRateOverride(sample ? makeOptional(sample) : WTF::nullopt);
+}
+
 void WKBundleSetAsynchronousSpellCheckingEnabled(WKBundleRef bundleRef, WKBundlePageGroupRef pageGroupRef, bool enabled)
 {
     WebKit::toImpl(bundleRef)->setAsynchronousSpellCheckingEnabled(WebKit::toImpl(pageGroupRef), enabled);
