Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp
@@ -597,6 +597,10 @@ void InjectedBundle::beginTesting(WKDictionaryRef settings, BegingTestingMode te
     WKBundleSetPopupBlockingEnabled(m_bundle, m_pageGroup, false);
     WKBundleSetAllowStorageAccessFromFileURLS(m_bundle, m_pageGroup, false);
 
+    // Don't use the actual hardware sample rate during testing or audio tests may have
+    // different output on different hardware.
+    WKBundleSetHardwareSampleRateOverride(m_bundle, 44100);
+
 #if PLATFORM(IOS_FAMILY)
     WKBundlePageSetUseTestingViewportConfiguration(page()->page(), !booleanForKey(settings, "UseFlexibleViewport"));
 #endif
